--- a/app/src/main/res/values/Values.xml
+++ b/app/src/main/res/values/Values.xml
@@ -6,6 +6,18 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 
+    <color name="bg_light">#663B8B</color>
+    <color name="bg_dark">#221734</color>
+
+    <color name="txt_lightPink">#FA8D93</color>
+    <color name="txt_darkpink">#FC489C</color>
+
+    <color name="backDropMain_darkGrey">#F6F6F6</color>
+
+    <color name="trnasacBnt_orange">#F9A690</color>
+    <color name="navigationBar_grey">#D9D9D9</color>
+    <color name="navigationIcon_pink">#C647BF</color>
+
 
     <!-- Theme colors -->
     <color name="colorPrimary">@color/gradient_1_purple</color>
